--- a/CBHDigestKit.xcodeproj/xcshareddata/xcschemes/CBHDigest.xcscheme
+++ b/CBHDigestKit.xcodeproj/xcshareddata/xcschemes/CBHDigest.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8376D1112216714900C15543"
-               BuildableName = "CBHDigest.framework"
-               BlueprintName = "CBHDigest"
-               ReferencedContainer = "container:CBHDigest.xcodeproj">
+               BuildableName = "CBHDigestKit.framework"
+               BlueprintName = "CBHDigestKit"
+               ReferencedContainer = "container:CBHDigestKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8376D11A2216714900C15543"
-               BuildableName = "CBHDigestTests.xctest"
-               BlueprintName = "CBHDigestTests"
-               ReferencedContainer = "container:CBHDigest.xcodeproj">
+               BuildableName = "CBHDigestKitTests.xctest"
+               BlueprintName = "CBHDigestKitTests"
+               ReferencedContainer = "container:CBHDigestKit.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -43,9 +43,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8376D1112216714900C15543"
-            BuildableName = "CBHDigest.framework"
-            BlueprintName = "CBHDigest"
-            ReferencedContainer = "container:CBHDigest.xcodeproj">
+            BuildableName = "CBHDigestKit.framework"
+            BlueprintName = "CBHDigestKit"
+            ReferencedContainer = "container:CBHDigestKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -65,9 +65,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8376D1112216714900C15543"
-            BuildableName = "CBHDigest.framework"
-            BlueprintName = "CBHDigest"
-            ReferencedContainer = "container:CBHDigest.xcodeproj">
+            BuildableName = "CBHDigestKit.framework"
+            BlueprintName = "CBHDigestKit"
+            ReferencedContainer = "container:CBHDigestKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -83,9 +83,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8376D1112216714900C15543"
-            BuildableName = "CBHDigest.framework"
-            BlueprintName = "CBHDigest"
-            ReferencedContainer = "container:CBHDigest.xcodeproj">
+            BuildableName = "CBHDigestKit.framework"
+            BlueprintName = "CBHDigestKit"
+            ReferencedContainer = "container:CBHDigestKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
